plugins {
    id 'java'
}

group 'matt.bot.discord'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.17

repositories {
    mavenCentral()
    maven {
        url 'https://m2.dv8tion.net/releases'
    }
}

dependencies {
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.16.0-rc1'
    implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.77'
    implementation 'net.dv8tion:JDA:5.0.0-beta.17'
    implementation group: 'org.springframework', name: 'spring-web', version: '6.0.13'
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.9'

    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
}

jar {

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes 'Main-Class': 'Main'
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}